--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "car-search",
+  "name": "react-unsplash-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2"
